# realworld-rust-axum-sqlx-seaquery

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  docker-publish.yml
infra/: setup-terraform.sh
infra/tf/: ecs.tf  iam.tf
src/: app_config.rs  application.rs  database.rs  main.rs
src/domain/: article_service.rs  comment_service.rs  user_service.rs
src/domain/commands/: create_article_command.rs  get_feed_query.rs  login_command.rs  register_command.rs  update_article_command.rs  update_user_command.rs
src/http/: mod.rs
src/http/dto/: article.rs  comment.rs  error.rs  login.rs  profile.rs  register.rs  tag.rs  user.rs
src/http/extractors/: auth_token.rs
src/http/routes/: articles.rs  auth.rs  comments.rs  health.rs  mod.rs  profiles.rs  tags.rs  users.rs
src/model/: indexed_article_field.rs  indexed_user_field.rs  limit.rs  mod.rs  offset.rs
src/model/persistence/: article.rs  article_view.rs  comment_view.rs
src/model/values/: article_body.rs  article_description.rs  article_id.rs  article_title.rs  bio.rs  comment_body.rs  comment_id.rs  email.rs  image.rs  mod.rs  password.rs  password_hash.rs  slug.rs  tag_id.rs  tag_name.rs  user_id.rs  username.rs
src/persistence/: article_repository.rs  comment_repository.rs  mod.rs  profile_repository.rs  tag_repository.rs  user_repository.rs
src/persistence/params/: list_articles_params.rs  mod.rs  update_article_params.rs  update_user_params.rs
src/utils/jwt/: mod.rs
tests/: article_tests.rs  auth_tests.rs  user_tests.rs
tests/common/: mod.rs
(+3 files in other folders)
